# idle_factory

./: .gitignore  .mcp.json  AGENTS.md  API_REFERENCE.md  CLAUDE.md  CODE_REVIEW_REPORT.md  Cargo.toml  GAME_SPEC.md  PROJECT_ROADMAP.md  README.md  WORK_LOG.md  build.rs  capture-wasm-logs.js  config.toml  deploy-wasm.sh  e2e-visual-test.js  e2e_state.json  gemini_fresh_review.md  gemini_review_context.txt  opencode.json  package-lock.json  package.json  run.sh  show-logs.sh  take-wasm-screenshot.js  test-wasm-interactions.js  verify-native.sh  verify-wasm.sh
.ai_context/: current_state.md  execution_plan.md  refactoring_plan.md  refactoring_request.md  review_context_20260102_004642.md  v02_implementation_plan.md  v02_review_request.md  v02_ui_code.md
.cargo/: config.local.toml  config.toml
.claude/: architecture-future.md  architecture-redesign-draft.md  architecture-redesign.md  architecture.md  bug-detection-plan.md  bugs.md  build.md  coding-rules.md  conveyor-direction.md  conveyor_spec.md  deleted-tests.md  design-event-system.md  escaped-bugs.md  i1-i5-design.md  implementation-plan.md  migration-tasks.md  network-design.md  opencode-workflow.md  parallel-tasks.json  plan-template.md  prd.md  refactoring-tasks.md  remaining-tasks.md  settings.json  settings.local.json  test-system-improvement.md  texture-system-design.md  wasm-removal-plan.md
.claude/commands/: assert.md  e2e-test.md  evaluate.md  fix-issues.md  generate-asset.md  generate-model.md  review-models.md  review.md  spawn_line.md  test.md  yolo.md
.claude/plans/: input-manager.md
.claude/skills/: accessibility.md  bevy-ecs.md  game-design-patterns.md  graphics-rendering.md  index.md  level-design.md  mod-api.md  multiplayer-design.md  pattern-evaluation.md  security-anticheat.md  sound-design.md
.claude/specs/: new-controls-migration-plan.md  new-controls-spec.md
.github/workflows/: cache-cleanup.yml  ci.yml  latest.yml  release.yml  wiki.yml
.specify/: NEXT_SESSION.md  README.md  roadmap.md
.specify/memory/: bevy-tips.md  changelog.md  constitution.md  critical-review-2025-12-25-final.md  critical-review-2025-12-25.md  design-patterns.md  feature-roadmap-from-research.md  input-rules.md  issues.md  lowpoly-style-research.md  magicavoxel-guide.md  modeling-compact.md  modeling-rules.md  patterns-compact.md  ui-design-rules.md  work-log.md
.specify/specs/: README.md  accessibility-localization-best-practices.md  ai-feedback-loop-prompts.md  ai-feedback-loop.md  bevy-ecs-best-practices.md  core-concept.md  core-game-mechanics.md  editor-review-critical.md  editor-ux-antipatterns.md  editor-ux-best-practices.md  editor.md  factory-game-antipatterns.md  factory-game-ux-research.md  first-30-minutes.md  game-design-document.md  game-ui-hud-best-practices.md  graphics-implementation-antipatterns.md  graphics-implementation-best-practices.md  index-compact.md  index.md  (+21 more)
assets/: config.yaml  keybinds.yaml
config/: active_profile.yaml
crates/factory-data-types/: Cargo.toml
crates/factory-data-types/src/: export_ts.rs  item.rs  lib.rs  quest.rs  recipe.rs
docs/: 3D_MODEL_GUIDELINES.md  GETTING_STARTED.md  KINETIC_MACHINE_ANIMATION_GUIDE.md  MODELING_REQUEST.md  PROJECT_OVERVIEW.md  scenario-test-guide.md  style-guide.json
examples/: world_bench.rs
feedback/: summary.md  trends.md  yolo_log.txt
resource_packs/: README.md
saves/: autosave.json
screenshots/: full_test_01_main_menu.txt  full_test_02_save_select.txt  full_test_03_world_generation.txt  full_test_04_ingame_start.txt  full_test_06_inventory_open.txt  full_test_08_pause_menu.txt  full_test_10_settings.txt  full_test_15_creative_inventory.txt  test_report.txt
scripts/: analyze-state-transitions.js  analyze_coverage.sh  analyze_logs.sh  architecture-check.sh  ask_gemini.sh  auto-clean-build.sh  blender-mcp.sh  bug-report.ps1  bug-repro.sh  build-packages.sh  build-wasm.sh  build_mod.sh  coverage.sh  create_block_atlas.py  cursor-log.sh  deploy-wasm.sh  detect_anomalies.sh  discord-notify.sh  dual_review.sh  e2e-full.sh  e2e-quick.sh  e2e-scenario.sh  e2e-wasm-quick.sh  export-conveyor-model.js  export-html-model.js  fuzz_test.sh  gemini  generate-blender-model.py  generate-comprehensive-tests.js  generate-test-matrix.js  generate-wiki.py  generate_test_report.sh  manual_test.sh  migration-status.sh  parallel-plan.sh  parallel-run.sh  pre-commit.sh  random_play_test.sh  release.sh  run-all-scenarios.sh  (+30 more)
src/: block_type.rs  blockbench.rs  constants.rs  game_spec.rs  lib.rs  logging.rs  main.rs  meshes.rs  save.rs  settings.rs  setup.rs  utils.rs  vox_loader.rs
test_reports/: final_report_20260102_073416.json  report_20260102_012850.txt  report_20260102_013028.txt  report_20260102_013051.txt  report_20260102_013123.txt  report_20260102_073257.txt  ssim_20260103_052900.json  ssim_20260104_020327.json  ssim_20260104_120145.json
tests/: e2e_new.rs  e2e_test.rs  fuzz_save_load.proptest-regressions  fuzz_save_load.rs  proptest_invariants.rs  ssim_test.rs  stateful_invariants.proptest-regressions  stateful_invariants.rs
tools/: blender_autostart_mcp.py  check_module_sizes.sh  convert_all_vox.sh  conveyor_visualizer.html  generate_all_assets.sh  generate_default_atlas.py  generate_item_sprites.py  generate_textures.py  preview_model.sh  start_blender_mcp.py  start_blender_mcp_server.sh  sync-lowpoly-kit.sh  texture_generator.py  ui_tuner.html  update_test_patterns.py  validate_patterns.py  vox_to_gltf.py  voxel_evaluator.py  voxel_generator.py
ui_preview/: preview.html  styles.css
web/: index.html  server.py
wiki/: Biomes.md  Blocks-Items.md  Conveyor-System.md  Core-Mod-Guide.md  Data-Mod-Guide.md  Getting-Started.md  Home-ja.md  Home.md  Machines.md  Mod-Structure.md  Mod構造.md  Quest-System.md  Recipes.md  Save-Format.md  Script-Mod-Guide.md  TOML-Schema.md  TOMLスキーマ.md  WASM-Host-Functions-ja.md  WASM-Host-Functions.md  WASMホスト関数.md  WebSocket-API-ja.md  WebSocket-API.md  _Sidebar.md  はじめに.md  クエストシステム.md  コアMod作成.md  コンベアシステム.md  スクリプトMod作成.md  セーブ形式.md  データMod作成.md  バイオーム.md  ブロックとアイテム.md  ホーム.md  レシピ.md  機械.md
(+746 files in other folders)
