[package]
name = "idle_factory"
version = "0.3.19"
edition = "2021"

[features]
default = ["updater"]
updater = ["dep:ureq", "dep:semver", "dep:open"]

[dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_ui",
    "bevy_text",
    "bevy_gltf",  # glTF model loading
    "bevy_scene",  # Scene support for glTF
    "default_font",
    "trace",  # Enable tracing for logging
    "png",  # PNG image loading for UI sprites
] }
futures-lite = "2.5"
tracing = "0.1"  # Structured logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"  # File logging
chrono = "0.4"  # Timestamp for log files
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }  # Enum string conversion
dot_vox = "5.1"  # MagicaVoxel .vox file loader
notify = "8.0"  # File system watcher for hot reload
crossbeam-channel = "0.5"  # Thread-safe channel for file watcher
ureq = { version = "2.9", default-features = false, features = ["tls"], optional = true }  # Lightweight HTTP client for update check
semver = { version = "1.0", optional = true }  # Semantic versioning for update comparison
open = { version = "5.0", optional = true }  # Open URLs in browser (fallback for updater)
flate2 = "1.0"
tar = "0.4"
zip = { version = "2.1", default-features = false, features = ["deflate"] }

# Updater binary (only built with updater feature)
[[bin]]
name = "updater"
path = "src/bin/updater.rs"
required-features = ["updater"]

# Linux-specific features
[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "multi_threaded",
    "x11",
] }

# Windows-specific features
[target.'cfg(target_os = "windows")'.dependencies]
bevy = { version = "0.15", default-features = false, features = [
    "multi_threaded",
] }

# Enable optimizations for dependencies in dev mode for faster runtime
[profile.dev]
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 3

# Development build with some optimization (fast compile + playable FPS)
[profile.dev-fast]
inherits = "dev"
opt-level = 1
split-debuginfo = "unpacked"

# Optimize release builds (final release)
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
strip = true
overflow-checks = true  # Enable overflow checks even in release

# Fast release build (for testing release mode quickly)
[profile.release-fast]
inherits = "release"
lto = false
opt-level = 2

[dev-dependencies]
proptest = "1.4"
image-compare = "0.4"
image = "0.25"
