[package]
name = "factory-data-types"
version = "0.1.0"
edition = "2021"
description = "Shared data types for Factory Data Architect and Idle Factory game"

[features]
default = []
typescript = ["ts-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Optional: TypeScript type generation
ts-rs = { version = "10", optional = true }
